dp问题 滑雪等待写

--- a/刷题笔记.md
+++ b/刷题笔记.md
@@ -7,3 +7,7 @@
 3.reverse在反转链表中的作用！
 
 4.scanf("%s", &str[0]) || printf("%s", str.c_str())
+
+5.记忆化搜索利用-1来标记是否搜索过来减少搜索时间，dp+记忆化搜索 ->注意无环
+
+6.善用yxcdp分析
